--- a/DBGUI Client/src/app/HomePage/Components/homepage/homepage.component.html
+++ b/DBGUI Client/src/app/HomePage/Components/homepage/homepage.component.html
@@ -4,14 +4,14 @@
             <div class="col col-10 align-items-start"> 
                 <p class="logo">DB GUI</p>    
             </div>
-            <app-signup class="col col-2 align-items-end text-right"></app-signup>
+            <app-signup [afterSignUp]="afterSignUp" class="col col-2 align-items-end text-right"></app-signup>
         </div>
 
 
 
         <app-signup *ngIf="false"></app-signup>
-        <div class="row">
-            <app-userlist class="col"></app-userlist>
+        <div *ngIf="afterSignUp" class="row">
+            <app-userlist [afterSignUp]="afterSignUp" class="col"></app-userlist>
         </div>
     </div>
 
